--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Solidity/Ethereum Contract Deployment Boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/pporche87/solidity-boiler#readme",
   "dependencies": {
-    "solc": "^0.4.19"
+    "ganache-cli": "^6.0.3",
+    "mocha": "^4.1.0",
+    "solc": "^0.4.19",
+    "web3": "^1.0.0-beta.26"
   }
 }
